changed Images folder name

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>About - Sam Sherrod</title>
-    <link rel="icon" type="image/x-icon" href="assets/Images/About/Sam Profile Picture.jpg?">
+    <link rel="icon" type="image/x-icon" href="assets/img/About/Sam Profile Picture.jpg?">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -87,7 +87,7 @@
                     <hr>
                 </div>
                 <div class="col-md-6">
-                    <img class="img-responsive img-border-left" src="assets/Images/About/Sam Profile Picture.jpg" alt="">
+                    <img class="img-responsive img-border-left" src="assets/img/About/Sam Profile Picture.jpg" alt="">
                 </div>
 
                 <p>Hi, I'm Sam! Thanks for checking out my portfolio.</p>
