--- a/projects/star-hunter.html
+++ b/projects/star-hunter.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Star Hunter - Sam Sherrod</title>
-    <link rel="icon" type="image/x-icon" href="../assets/Images/About/Sam Profile Picture.jpg?">
+    <link rel="icon" type="image/x-icon" href="../assets/img/About/Sam Profile Picture.jpg?">
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -90,17 +90,17 @@
                         Student Solo Virtual Reality Project<br />
                         <strong>Role: </strong> Solo VR Developer
                     </p> 
-                    <a href="../assets/Images/Projects/Star Hunter/Star Hunter 1.png">
-                        <img class="img-responsive img-border img-left" src="../assets/Images/Projects/Star Hunter/Star Hunter 1.png" alt="">
+                    <a href="../assets/img/Projects/Star Hunter/Star Hunter 1.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/Projects/Star Hunter/Star Hunter 1.png" alt="">
                     </a>
-                    <a href="../assets/Images/Projects/Star Hunter/Star Hunter 2.png">
-                        <img class="img-responsive img-border img-left" src="../assets/Images/Projects/Star Hunter/Star Hunter 2.png" alt="">
+                    <a href="../assets/img/Projects/Star Hunter/Star Hunter 2.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/Projects/Star Hunter/Star Hunter 2.png" alt="">
                     </a>
-                    <a href="../assets/Images/Projects/Star Hunter/Star Hunter 3.png">
-                        <img class="img-responsive img-border img-left" src="../assets/Images/Projects/Star Hunter/Star Hunter 3.png" alt="">
+                    <a href="../assets/img/Projects/Star Hunter/Star Hunter 3.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/Projects/Star Hunter/Star Hunter 3.png" alt="">
                     </a>
-                    <a href="../assets/Images/Projects/Star Hunter/Star Hunter 4.png">
-                        <img class="img-responsive img-border img-left" src="../assets/Images/Projects/Star Hunter/Star Hunter 4.png" alt="">
+                    <a href="../assets/img/Projects/Star Hunter/Star Hunter 4.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/Projects/Star Hunter/Star Hunter 4.png" alt="">
                     </a>
 
                     <hr class="visible-xs">
