--- a/projects/still-life.html
+++ b/projects/still-life.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Still Life - Sam Sherrod</title>
-    <link rel="icon" type="image/x-icon" href="../assets/Images/About/Sam Profile Picture.jpg?">
+    <link rel="icon" type="image/x-icon" href="../assets/img/About/Sam Profile Picture.jpg?">
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -90,8 +90,8 @@
                         Personal Project Showcasing 3D Graphics Skills<br />
                         <strong>Role: </strong> Solo Graphics Engineer
                     </p> 
-                    <a href="../assets/Images/Projects/Star Hunter/Star Hunter 1.png">
-                        <img class="img-responsive img-border img-left" src="../assets/Images/Projects/Star Hunter/Star Hunter 1.png" alt="">
+                    <a href="../assets/img/Projects/Star Hunter/Star Hunter 1.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/Projects/Star Hunter/Star Hunter 1.png" alt="">
                     </a>
 
                     <hr class="visible-xs">
