--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Contact - Sam Sherrod</title>
-    <link rel="icon" type="image/x-icon" href="assets/Images/About/Sam Profile Picture.jpg?">
+    <link rel="icon" type="image/x-icon" href="assets/img/About/Sam Profile Picture.jpg?">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
