--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Sam Sherrod</title>
-    <link rel="icon" type="image/x-icon" href="assets/Images/About/Sam Profile Picture.jpg?">
+    <link rel="icon" type="image/x-icon" href="assets/img/About/Sam Profile Picture.jpg?">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -93,19 +93,19 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
                             <div class="item active">
-                                <img class="img-responsive img-full" src="assets/Images/Projects/Red Knight/red-knight-prototype-img.png" alt="">
+                                <img class="img-responsive img-full" src="assets/img/Projects/Red Knight/red-knight-prototype-img.png" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="assets/Images/Projects/Star Hunter/Star Hunter 1.png" alt="">
+                                <img class="img-responsive img-full" src="assets/img/Projects/Star Hunter/Star Hunter 1.png" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="assets/Images/Projects/Ottodecks/Ottodecks Volume Up.png" alt="">
+                                <img class="img-responsive img-full" src="assets/img/Projects/Ottodecks/Ottodecks Volume Up.png" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="assets/Images/Projects/Instagram Filter/Instagram Filter - SepiaBlur.png" alt="">
+                                <img class="img-responsive img-full" src="assets/img/Projects/Instagram Filter/Instagram Filter - SepiaBlur.png" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="assets/Images/Projects/2D-Platformer/jumping over enemy - level1.png" alt="">
+                                <img class="img-responsive img-full" src="assets/img/Projects/2D-Platformer/jumping over enemy - level1.png" alt="">
                             </div>
                         </div>
 
@@ -139,7 +139,7 @@
                     
                     <hr>
                     <a href="projects/red-knight.html">
-                        <img class="img-responsive img-border img-left" src="assets/Images/Projects/Red Knight/red-knight-prototype-img.png" alt="">
+                        <img class="img-responsive img-border img-left" src="assets/img/Projects/Red Knight/red-knight-prototype-img.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Red Knight is a 2D action platformer centered around a vampire hunter seeking revenge against Dracula.
@@ -154,7 +154,7 @@
                     </h2>
                     <hr>
                     <a href="projects/star-hunter.html">
-                        <img class="img-responsive img-border img-left" src="assets/Images/Projects/Star Hunter/Star Hunter 1.png" alt="">
+                        <img class="img-responsive img-border img-left" src="assets/img/Projects/Star Hunter/Star Hunter 1.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.
