--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Projects - Sam Sherrod</title>
-    <link rel="icon" type="image/x-icon" href="assets/Images/About/Sam Profile Picture.jpg?">
+    <link rel="icon" type="image/x-icon" href="assets/img/About/Sam Profile Picture.jpg?">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -85,7 +85,7 @@
                     <h2 class="intro-text text-center"> <strong>C# | Game Dev | Unity | Agile</strong></h2>
                     <hr>
                     <a href="projects/red-knight.html">
-                        <img class="img-responsive img-border img-left" src="assets/Images/Projects/Red Knight/red-knight-prototype-img.png" alt="">
+                        <img class="img-responsive img-border img-left" src="assets/img/Projects/Red Knight/red-knight-prototype-img.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>In Development - Expected Release March 2023</p>
@@ -104,7 +104,7 @@
                     <h2 class="intro-text text-center"> <strong>C# | VR Dev | Game Dev | Unity</strong></h2>
                     <hr>
                     <a href="projects/star-hunter.html">
-                        <img class="img-responsive img-border img-left" src="assets/Images/Projects/Star Hunter/Star Hunter 1.png" alt="">
+                        <img class="img-responsive img-border img-left" src="assets/img/Projects/Star Hunter/Star Hunter 1.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>In Development - Expected Release March 2023</p>
@@ -122,7 +122,7 @@
                     <h2 class="intro-text text-center"> <strong>Graphics Programming | Unity | Shaders </strong></h2>
                     <hr>
                     <a href="projects/still-life.html">
-                        <img class="img-responsive img-border img-left" src="assets/Images/Projects/Star Hunter/Star Hunter 1.png" alt="">
+                        <img class="img-responsive img-border img-left" src="assets/img/Projects/Star Hunter/Star Hunter 1.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>February 2023</p>
@@ -140,7 +140,7 @@
                     <h2 class="intro-text text-center"> <strong>C++ | Audio Programming | JUCE</strong></h2>
                     <hr>
                     <a href="projects/ottodecks-dj-app.html">
-                        <img class="img-responsive img-border img-left" src="assets/Images/Projects/Ottodecks/Ottodecks Volume Up.png" alt="">
+                        <img class="img-responsive img-border img-left" src="assets/img/Projects/Ottodecks/Ottodecks Volume Up.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Released March 2022</p>
@@ -158,7 +158,7 @@
                     <h2 class="intro-text text-center"> <strong>JavaScript | Graphics Programming | p5.js</strong></h2>
                     <hr>
                     <a href="projects/instagram-filter.html">
-                        <img class="img-responsive img-border img-left" src="assets/Images/Projects/Instagram Filter/Instagram Filter - SepiaBlur.png" alt="">
+                        <img class="img-responsive img-border img-left" src="assets/img/Projects/Instagram Filter/Instagram Filter - SepiaBlur.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Released March 2022</p>
@@ -176,7 +176,7 @@
                     <h2 class="intro-text text-center"> <strong>JavaScript, Tiled, NPM | Game Dev | Agile</strong></h2>
                     <hr>
                     <a href="projects/2d-platformer.html">
-                        <img class="img-responsive img-border img-left" src="assets/Images/Projects/2D-Platformer/jumping over enemy - level1.png" alt="">
+                        <img class="img-responsive img-border img-left" src="assets/img/Projects/2D-Platformer/jumping over enemy - level1.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Released September 2022</p>
@@ -195,7 +195,7 @@
                         Front and Backend Development</strong></h2>
                     <hr>
                     <a href="projects/smart-home.html">
-                        <img class="img-responsive img-border img-left" src="assets/Images/Projects/Average Face Filter/AverageFaceDefault.png" alt="">
+                        <img class="img-responsive img-border img-left" src="assets/img/Projects/Average Face Filter/AverageFaceDefault.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Released March 2022</p>
