--- a/projects/red-knight.html
+++ b/projects/red-knight.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Red Knight - Sam Sherrod</title>
-    <link rel="icon" type="image/x-icon" href="../assets/Images/About/Sam Profile Picture.jpg?">
+    <link rel="icon" type="image/x-icon" href="../assets/img/About/Sam Profile Picture.jpg?">
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -90,8 +90,8 @@
                         Student Group Games Development Project<br />
                         <strong>Role: </strong> Lead Developer
                     </p> 
-                    <a href="../assets/Images/Projects/Red Knight/red-knight-prototype-img.png">
-                        <img class="img-responsive img-border img-left" src="../assets/Images/Projects/Red Knight/red-knight-prototype-img.png" alt="">
+                    <a href="../assets/img/Projects/Red Knight/red-knight-prototype-img.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/Projects/Red Knight/red-knight-prototype-img.png" alt="">
                     </a>
 
                     <hr class="visible-xs">
