--- a/projects/instagram-filter.html
+++ b/projects/instagram-filter.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Instagram Filter - Sam Sherrod</title>
-    <link rel="icon" type="image/x-icon" href="../assets/img/About/Sam Profile Picture.jpg?">
+    <link rel="icon" type="image/x-icon" href="../assets/img/about/Sam Profile Picture.jpg?">
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -57,10 +57,10 @@
                         <a href="../index.html">Home</a>
                     </li>
                     <li>
-                        <a href="../about.html">About</a>
+                        <a href="../about.html">about</a>
                     </li>
                     <li>
-                        <a href="../projects.html">Projects</a>
+                        <a href="../projects.html">projects</a>
                     </li>
                     <li>
                         <a href="../contact.html">Contact</a>
@@ -91,23 +91,23 @@
                         <strong>Role: </strong> Solo Developer
                     </p> 
 
-                    <a href="../assets/img/Projects/Instagram Filter/Instagram Filter - SepiaBlur.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/Projects/Instagram Filter/Instagram Filter - SepiaBlur.png" alt="">
+                    <a href="../assets/img/projects/Instagram Filter/Instagram Filter - SepiaBlur.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Instagram Filter/Instagram Filter - SepiaBlur.png" alt="">
                     </a>
-                    <a href="../assets/img/Projects/Instagram Filter/Instagram Filter - Gray.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/Projects/Instagram Filter/Instagram Filter - Gray.png" alt="">
+                    <a href="../assets/img/projects/Instagram Filter/Instagram Filter - Gray.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Instagram Filter/Instagram Filter - Gray.png" alt="">
                     </a>
-                    <a href="../assets/img/Projects/Instagram Filter/Instagram Filter - EdgeColor.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/Projects/Instagram Filter/Instagram Filter - EdgeColor.png" alt="">
+                    <a href="../assets/img/projects/Instagram Filter/Instagram Filter - EdgeColor.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Instagram Filter/Instagram Filter - EdgeColor.png" alt="">
                     </a>
-                    <a href="../assets/img/Projects/Instagram Filter/Instagram Filter - Inverse.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/Projects/Instagram Filter/Instagram Filter - Inverse.png" alt="">
+                    <a href="../assets/img/projects/Instagram Filter/Instagram Filter - Inverse.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Instagram Filter/Instagram Filter - Inverse.png" alt="">
                     </a>
-                    <a href="../assets/img/Projects/Instagram Filter/Instagram Filter - ThresholdMedium.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/Projects/Instagram Filter/Instagram Filter - ThresholdMedium.png" alt="">
+                    <a href="../assets/img/projects/Instagram Filter/Instagram Filter - ThresholdMedium.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Instagram Filter/Instagram Filter - ThresholdMedium.png" alt="">
                     </a>
-                    <a href="../assets/img/Projects/Instagram Filter/Instagram Filter - Custom.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/Projects/Instagram Filter/Instagram Filter - Custom.png" alt="">
+                    <a href="../assets/img/projects/Instagram Filter/Instagram Filter - Custom.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Instagram Filter/Instagram Filter - Custom.png" alt="">
                     </a>
 
                     <hr class="visible-xs">
