--- a/about.html
+++ b/about.html
@@ -9,8 +9,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>About - Sam Sherrod</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/About/Sam Profile Picture.jpg?">
+    <title>about - Sam Sherrod</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/about/Sam Profile Picture.jpg?">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -57,10 +57,10 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="about.html">about</a>
                     </li>
                     <li>
-                        <a href="projects.html">Projects</a>
+                        <a href="projects.html">projects</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -81,13 +81,13 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">About
+                    <h2 class="intro-text text-center">about
                         <strong>Sam Sherrod</strong>
                     </h2>
                     <hr>
                 </div>
                 <div class="col-md-6">
-                    <img class="img-responsive img-border-left" src="assets/img/About/Sam Profile Picture.jpg" alt="">
+                    <img class="img-responsive img-border-left" src="assets/img/about/Sam Profile Picture.jpg" alt="">
                 </div>
 
                 <p>Hi, I'm Sam! Thanks for checking out my portfolio.</p>
