--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Contact - Sam Sherrod</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/About/Sam Profile Picture.jpg?">
+    <link rel="icon" type="image/x-icon" href="assets/img/about/Sam Profile Picture.jpg?">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -57,10 +57,10 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="about.html">about</a>
                     </li>
                     <li>
-                        <a href="projects.html">Projects</a>
+                        <a href="projects.html">projects</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
