--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Sam Sherrod</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/About/Sam Profile Picture.jpg?">
+    <link rel="icon" type="image/x-icon" href="assets/img/about/Sam Profile Picture.jpg?">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -57,10 +57,10 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="about.html">about</a>
                     </li>
                     <li>
-                        <a href="projects.html">Projects</a>
+                        <a href="projects.html">projects</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -93,19 +93,19 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
                             <div class="item active">
-                                <img class="img-responsive img-full" src="assets/img/Projects/Red Knight/red-knight-prototype-img.png" alt="">
+                                <img class="img-responsive img-full" src="assets/img/projects/Red Knight/red-knight-prototype-img.png" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="assets/img/Projects/Star Hunter/Star Hunter 1.png" alt="">
+                                <img class="img-responsive img-full" src="assets/img/projects/Star Hunter/Star Hunter 1.png" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="assets/img/Projects/Ottodecks/Ottodecks Volume Up.png" alt="">
+                                <img class="img-responsive img-full" src="assets/img/projects/Ottodecks/Ottodecks Volume Up.png" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="assets/img/Projects/Instagram Filter/Instagram Filter - SepiaBlur.png" alt="">
+                                <img class="img-responsive img-full" src="assets/img/projects/Instagram Filter/Instagram Filter - SepiaBlur.png" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="assets/img/Projects/2D-Platformer/jumping over enemy - level1.png" alt="">
+                                <img class="img-responsive img-full" src="assets/img/projects/2D-Platformer/jumping over enemy - level1.png" alt="">
                             </div>
                         </div>
 
@@ -129,7 +129,7 @@
                
             <div class="box">
                  <h1 class="intro-text text-center">
-                       <strong>Current Projects:</strong>  
+                       <strong>Current projects:</strong>  
                     </h1>
                 <div class="col-lg-12">
                     <hr>
@@ -139,7 +139,7 @@
                     
                     <hr>
                     <a href="projects/red-knight.html">
-                        <img class="img-responsive img-border img-left" src="assets/img/Projects/Red Knight/red-knight-prototype-img.png" alt="">
+                        <img class="img-responsive img-border img-left" src="assets/img/projects/Red Knight/red-knight-prototype-img.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Red Knight is a 2D action platformer centered around a vampire hunter seeking revenge against Dracula.
@@ -154,7 +154,7 @@
                     </h2>
                     <hr>
                     <a href="projects/star-hunter.html">
-                        <img class="img-responsive img-border img-left" src="assets/img/Projects/Star Hunter/Star Hunter 1.png" alt="">
+                        <img class="img-responsive img-border img-left" src="assets/img/projects/Star Hunter/Star Hunter 1.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.
