--- a/projects/2d-platformer.html
+++ b/projects/2d-platformer.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>2D Platformer - Sam Sherrod</title>
-    <link rel="icon" type="image/x-icon" href="../assets/img/About/Sam Profile Picture.jpg?">
+    <link rel="icon" type="image/x-icon" href="../assets/img/about/Sam Profile Picture.jpg?">
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -57,10 +57,10 @@
                         <a href="../index.html">Home</a>
                     </li>
                     <li>
-                        <a href="../about.html">About</a>
+                        <a href="../about.html">about</a>
                     </li>
                     <li>
-                        <a href="../projects.html">Projects</a>
+                        <a href="../projects.html">projects</a>
                     </li>
                     <li>
                         <a href="../contact.html">Contact</a>
@@ -91,8 +91,8 @@
                         <strong>Role: </strong> Lead Developer and Game Programmer
                     </p> 
 
-                    <a href="../assets/img/Projects/2D-Platformer/jumping over enemy - level1.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/Projects/2D-Platformer/jumping over enemy - level1.png" alt="">
+                    <a href="../assets/img/projects/2D-Platformer/jumping over enemy - level1.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/2D-Platformer/jumping over enemy - level1.png" alt="">
                     </a>
 
                     <hr class="visible-xs">
