--- a/projects/ottodecks-dj-app.html
+++ b/projects/ottodecks-dj-app.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>DJ App - Sam Sherrod</title>
-    <link rel="icon" type="image/x-icon" href="../assets/img/About/Sam Profile Picture.jpg?">
+    <link rel="icon" type="image/x-icon" href="../assets/img/about/Sam Profile Picture.jpg?">
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -57,10 +57,10 @@
                         <a href="../index.html">Home</a>
                     </li>
                     <li>
-                        <a href="../about.html">About</a>
+                        <a href="../about.html">about</a>
                     </li>
                     <li>
-                        <a href="../projects.html">Projects</a>
+                        <a href="../projects.html">projects</a>
                     </li>
                     <li>
                         <a href="../contact.html">Contact</a>
@@ -91,17 +91,17 @@
                         <strong>Role: </strong> Solo Developer/Audio Programmer
                     </p> 
 
-                    <a href="../assets/img/Projects/Ottodecks/Ottodecks Volume Up.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/Projects/Ottodecks/Ottodecks Volume Up.png" alt="">
+                    <a href="../assets/img/projects/Ottodecks/Ottodecks Volume Up.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Ottodecks/Ottodecks Volume Up.png" alt="">
                     </a>
-                    <a href="../assets/img/Projects/Ottodecks/Ottodecks Default.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/Projects/Ottodecks/Ottodecks Default.png" alt="">
+                    <a href="../assets/img/projects/Ottodecks/Ottodecks Default.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Ottodecks/Ottodecks Default.png" alt="">
                     </a>
-                    <a href="../assets/img/Projects/Ottodecks/Ottodecks Track Waveform.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/Projects/Ottodecks/Ottodecks Track Waveform.png" alt="">
+                    <a href="../assets/img/projects/Ottodecks/Ottodecks Track Waveform.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Ottodecks/Ottodecks Track Waveform.png" alt="">
                     </a>
-                    <a href="../assets/img/Projects/Ottodecks/Ottodecks Playlist.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/Projects/Ottodecks/Ottodecks Playlist.png" alt="">
+                    <a href="../assets/img/projects/Ottodecks/Ottodecks Playlist.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Ottodecks/Ottodecks Playlist.png" alt="">
                     </a>
 
                     <hr class="visible-xs">
