--- a/projects/red-knight.html
+++ b/projects/red-knight.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Red Knight - Sam Sherrod</title>
-    <link rel="icon" type="image/x-icon" href="../assets/img/About/Sam Profile Picture.jpg?">
+    <link rel="icon" type="image/x-icon" href="../assets/img/about/Sam Profile Picture.jpg?">
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -57,10 +57,10 @@
                         <a href="../index.html">Home</a>
                     </li>
                     <li>
-                        <a href="../about.html">About</a>
+                        <a href="../about.html">about</a>
                     </li>
                     <li>
-                        <a href="../projects.html">Projects</a>
+                        <a href="../projects.html">projects</a>
                     </li>
                     <li>
                         <a href="../contact.html">Contact</a>
@@ -90,8 +90,8 @@
                         Student Group Games Development Project<br />
                         <strong>Role: </strong> Lead Developer
                     </p> 
-                    <a href="../assets/img/Projects/Red Knight/red-knight-prototype-img.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/Projects/Red Knight/red-knight-prototype-img.png" alt="">
+                    <a href="../assets/img/projects/Red Knight/red-knight-prototype-img.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Red Knight/red-knight-prototype-img.png" alt="">
                     </a>
 
                     <hr class="visible-xs">
