--- a/projects.html
+++ b/projects.html
@@ -77,6 +77,7 @@
 
     <div class="container">
 
+    <!-- Red Knight -->
         <div class="row">
             <div class="box">      
                 <div class="col-lg-12">
@@ -96,6 +97,7 @@
             </div>
         </div>
 
+        <!-- Star Hunter -->
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
@@ -114,6 +116,7 @@
             </div>
         </div>
 
+        <!-- Still Life -->
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
@@ -132,6 +135,7 @@
             </div>
         </div>
 
+        <!-- Ottodecks -->
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
@@ -150,24 +154,7 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center"> <strong>Instagram Filter</strong> Image Processing - Student Project</h2>
-                    <h2 class="intro-text text-center"> <strong>JavaScript | Graphics Programming | p5.js</strong></h2>
-                    <hr>
-                    <a href="projects/instagram-filter.html">
-                        <img class="img-responsive img-border img-left" src="assets/img/projects/Instagram Filter/Instagram Filter - SepiaBlur.png" alt="">
-                    </a>
-                    <hr class="visible-xs">
-                    <p>Released March 2022</p>
-                    <p>An image processing tool that allows a user to apply 10 different filters as well as other tools to an image</p>
-                    <a href="projects/instagram-filter.html" class="btn btn-default btn-lg">Read More</a>
-                </div>
-            </div>
-        </div>
-
+        <!-- 2D Platformer -->
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
@@ -186,6 +173,26 @@
             </div>
         </div>
 
+        <!-- Instagram Filter -->
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center"> <strong>Instagram Filter</strong> Image Processing - Student Project</h2>
+                    <h2 class="intro-text text-center"> <strong>JavaScript | Graphics Programming | p5.js</strong></h2>
+                    <hr>
+                    <a href="projects/instagram-filter.html">
+                        <img class="img-responsive img-border img-left" src="assets/img/projects/Instagram Filter/Instagram Filter - SepiaBlur.png" alt="">
+                    </a>
+                    <hr class="visible-xs">
+                    <p>Released March 2022</p>
+                    <p>An image processing tool that allows a user to apply 10 different filters as well as other tools to an image</p>
+                    <a href="projects/instagram-filter.html" class="btn btn-default btn-lg">Read More</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Smart Home -->
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
