Update smart-home.html with pictures and description

--- a/projects.html
+++ b/projects.html
@@ -202,7 +202,7 @@
                         Front and Backend Development</strong></h2>
                     <hr>
                     <a href="projects/smart-home.html">
-                        <img class="img-responsive img-border img-left" src="assets/img/projects/Average Face Filter/AverageFaceDefault.png" alt="">
+                        <img class="img-responsive img-border img-left" src="assets/img/projects/smart-home/add device.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Released March 2022</p>
