--- a/projects/smart-home.html
+++ b/projects/smart-home.html
@@ -90,48 +90,33 @@
                         Student Solo Front and Backend Web Project<br />
                         <strong>Role: </strong> Solo Front and Backend Developer
                     </p> 
-                    <a href="../assets/img/projects/Star Hunter/Star Hunter 1.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Star Hunter/Star Hunter 1.png" alt="">
+                    <a href="../assets/img/projects/smart-home/add device.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/smart-home/add device.png" alt="">
                     </a>
-                    <a href="../assets/img/projects/Star Hunter/Star Hunter 2.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Star Hunter/Star Hunter 2.png" alt="">
+                    <a href="../assets/img/projects/smart-home/list devices.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/smart-home/list devices.png" alt="">
                     </a>
-                    <a href="../assets/img/projects/Star Hunter/Star Hunter 3.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Star Hunter/Star Hunter 3.png" alt="">
-                    </a>
-                    <a href="../assets/img/projects/Star Hunter/Star Hunter 4.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Star Hunter/Star Hunter 4.png" alt="">
+                    <a href="../assets/img/projects/smart-home/seach devices.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/smart-home/seach devices.png" alt="">
                     </a>
 
                     <hr class="visible-xs">
 
-                    <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.
-                        When all of the stars are connected, an image will be shown, and the next set of stars will be displayed in the sky. 
-                        It is currently in development built solely by myself. I'm very interested in the field of virtual reality, and have
-                        thoroughly enjoyed working on this project. It is made in the Unity game engine using Unity's XR Toolkit, and is tested
-                        for the Meta Quest 2.</p>
-                    <p>This is a solo project made for University of London's Virtual Reality  class. The game will be finished and 
-                        playable on Windows, Mac, WebGL, and the Meta Quest 2 in March 2023.</p>
+                    <p>Smart Home</p>
+                    <p>This is a solo project made for University of London's Databases, Networks, and the Web class.</p>
                     <p><strong>Game features</strong> will include:</p>
                     
                     <ul>
-                        <li>a working virtual bow and arrow with precise aiming</li>
-                        <li>virtual hands that move and animate with the player's hands</li>
-                        <li>bow is attached to the front of the body, and the arrows are in a quiver attached to the back of the player</li>
-                        <li>customizable menu options including the ability to toggle moving with the joystick or teleport, adjusting the height
-                            and size of the player's virtual body</li>
-                        <li>a virtual menu</li>
-                        <li>unlimited arrows</li>
-                        <li>a large open area of grass to move around in</li>
-                        <li>a nighttime sky</li>
                     </ul>
 
                     <p><strong>Technologies used:</strong>
                     <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
                         <li>JavaScript</li>
                         <li>NodeJS</li>
-                        <li>SQL, MySQL</li>
                         <li>EJS</li>
+                        <li>SQL, MySQL</li>
                     </ul>
                     </p>
 
